packages/survey-core/src/themes/adapters/bootstrap.scss
/* ... */
/* check/radio icon redifinition */
.sd-item--checked .sd-radio__decorator::before {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
}

.sd-item--checked .sd-checkbox__decorator::before {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
}
.sd-item__decorator {
  transition: none;
}

.sd-item--checked .sd-item__decorator::before {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background-size: calc(1em - 2 * var(--bs-border-width));
  background-position: center;
  background-repeat: no-repeat;
}

.sd-item__svg {
  display: none;
}

/* check focus and pressed state */
.sd-item:not(.sd-item--checked) {
  --sjs2-border-effect-component-check-a11y: inset 0 0 0 1px var(--sjs-bs-primary-focus-border), var(--sjs2-border-effect-a11y);
}
.sd-item__control:focus + .sd-item__decorator::before,
.sd-item__control:active + .sd-item__decorator::before {
  position: absolute;
  top: 0;
  left: 0;
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  box-shadow: var(--sjs2-border-effect-component-check-a11y);
}
.sd-item__control:focus + .sd-checkbox__decorator::before,
.sd-item__control:active + .sd-checkbox__decorator::before {
  border-radius: var(--sjs2-radius-component-checkbox);
}
.sd-item__control:focus + .sd-radio__decorator::before,
.sd-item__control:active + .sd-radio__decorator::before {
  border-radius: var(--sjs2-radius-component-radio);
}
.sd-item__control:active + .sd-item__decorator {
  filter: brightness(90%);
}

/* toggle */
.sd-boolean-switch {
  --sd-boolean-switch-thumb-gap: 0px;
  --sd-boolean-switch-thumb-width: 1em;
  --sd-boolean-switch-thumb-height: 1em;
  --sd-boolean-switch-button-spacing: 0px;
  --sd-boolean-switch-button-width: 2em;
  --sd-boolean-switch-button-heigth: 1em;
}

.sd-boolean-switch__button {
  --sjs2-border-effect-component-check-a11y: inset 0 0 0 1px var(--sjs-bs-primary-focus-border), var(--sjs2-border-effect-a11y);
  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");

  &:focus {
    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
    box-shadow: var(--sjs2-border-effect-component-check-a11y);
  }

  &.sd-boolean-switch__button--checked {
    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
  }

  &:active {
    filter: brightness(90%);
  }
}

[data-bs-theme="dark"] .sd-boolean-switch__button:not(.sd-boolean-switch__button--checked):not(:focus) {
  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28255, 255, 255, 0.25%29'/%3e%3c/svg%3e");
}

.sd-boolean-switch__thumb {
  width: 50%;
  height: 100%;
  background-image: var(--bs-form-switch-bg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: calc(1em - var(--bs-border-width) * 2);
}

.sd-boolean-switch__thumb-circle {
  display: none;
}

/* dropdown */
.sd-dropdown .sd-action-bar {
  margin-inline-end: 0.25rem;
  gap: 0.25rem;

  svg {
    --sd-action-icon-size: 1.5rem;
  }
}

.sd-dropdown .sd-action {
  padding: 0;
  height: 1.5rem;
  width: 1.5rem;
}

/* tagbox */
.sd-tagbox.sd-tagbox--empty .sd-tagbox__input  {
  padding-inline: var(--sjs2-layout-component-input-medium-content-padding-horizontal);
  padding-block: var(--sjs2-layout-component-input-medium-content-padding-vertical);
}
/* button pressed state */
.sd-action--primary:active {
  transform: initial;
}
.sd-action--primary:active {
  color: var(--sjs-bs-on-primary);
  background-color: var(--sjs-bs-primary-active-bg);
  border-color: var(--sjs-bs-primary-active-border);
}

.sd-action--tertiary:active {
  color: var(--sjs-bs-on-primary);
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

/* btn-sm */
.sd-action--small {
  border-radius: var(--sjs2-radius-component-action-small);
  padding-block: var(--sjs2-layout-component-action-small-box-padding-vertical);
  padding-inline: var(--sjs2-layout-component-action-small-box-padding-horizontal);
  font-size: var(--sjs2-typography-font-size-component-action-small-content);
}

/* tables */
.sd-table {
  --sd-table-cell-width: initial;
  --sd-table-cell-min-width: initial;
}

.sd-table.sd-table.sd-table>tbody>tr {
  &>th, &>td {
    &:where(:not(.sd-table__cell--error)) {
      border-top: var(--bs-border-width) solid var(--bs-border-color);
      border-bottom: none;
      padding: 0.5rem;
      .sd-radio__decorator {
        margin: 0;
      }
    }
  }
}

.sd-table.sd-table.sd-table>thead>tr {
  &>th, &>td {
    border-top: none;  
    border-bottom: none;
    padding: 0.5rem;
  }
}

.sd-table__cell--actions:not(.sd-table__cell--vertical):last-child .sd-action-bar {
  margin: 0;
}

.sd-question__placeholder {
  min-height: unset;
  align-items: flex-start;
}

.sd-theme-root .sd-element--complex.sd-element--with-frame > .sd-element__header {
  padding-bottom: 0;
  border: none;
}

.sd-theme-root .sd-element--complex.sd-element--with-frame > .sd-element__header:after {
  content: initial;
}

.sd-theme-root .sd-action {
  text-transform: var(--sjs-bs-action-text-transform);
  letter-spacing: var(--sjs-bs-action-letter-spacing);
}
.sd-theme-root .sd-action__title {
  font-weight: var(--sjs-bs-action-font-weight);
}

.sd-theme-root .sd-element--with-frame {
  --sd-base-padding: 1rem;
}
/* ... */

